# openNook

./: .gitignore  README.md  index.html  package-lock.json  package.json  shadcn-components.md  test_calendar.sh  vite.config.ts
.github/: FUNDING.yml
docs/: external-plugin-guide.md  plugin-api.md
docs/examples/external-counter-plugin/: README.md  index.js  package-lock.json  package.json  plugin.json
docs/examples/external-counter-plugin/src/: index.tsx
src/: App.css  App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  Entitlements.plist  Info.plist  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json  fs-allow-all.json
src-tauri/icons/: icon.icns
src-tauri/src/: audio.rs  calendar.rs  database.rs  files.rs  lib.rs  main.rs  models.rs  notes.rs  plugins.rs  utils.rs  widgets.rs  window.rs
src/components/: AlbumCover.tsx  AudioVisualizer.tsx  DynamicIsland.css  DynamicIsland.tsx  DynamicIslandAlert.css  DynamicIslandAlert.tsx  ExpandedMedia.tsx  FileTray.tsx  PluginStore.tsx  SmartAudioVisualizer.tsx
src/components/island/: CompactFiles.tsx  CompactIdle.tsx  CompactMedia.tsx  CompactOnboard.tsx  CompactWrapper.tsx  DynamicIsland.tsx  ExpandedIsland.tsx  ExpandedMedia.tsx  ModeIndicator.tsx  types.ts
src/components/ui/: date-picker.tsx  popover.tsx  scrolling-text.tsx
src/components/widgets/: CalendarWidget.tsx  MirrorWidget.tsx  RemindersWidget.tsx  SessionWidget.tsx  SpeedTestWidget.tsx  TimerWidget.tsx  WidgetAddDialog.tsx  WidgetRegistry.ts  WidgetTypes.ts  WidgetWrapper.tsx  index.ts  widgetConfig.ts
src/context/: NotificationContext.tsx  PopoverContext.tsx  PopoverStateContext.tsx  SessionContext.tsx  TimerContext.tsx  WidgetContext.tsx
src/hooks/: useCompactMode.ts  useFileTray.ts  useMediaPlayer.ts  useNotchInfo.ts  useReminders.ts
src/lib/: haptics.ts
src/services/: DatabaseService.ts  pluginLoader.ts
src/stores/: index.ts  useDynamicIslandStore.ts  useFileTrayStore.ts  useMediaPlayerStore.ts  useNotificationStore.ts  usePluginStore.ts  useSessionStore.ts  useTimerStore.ts  useWidgetStore.ts
src/types/: fast-speedtest-api.d.ts
src/utils/: imageUtils.ts  soundUtils.ts
src/windows/Settings/: Settings.css  Settings.tsx
