[package]
name = "OpenNook"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "overdone_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset", "macos-private-api"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
objc2 = "0.6.3"
objc2-foundation = "0.3.2"
objc2-media-player = { version = "0.3.2", features = ["MPNowPlayingInfoCenter", "MPMediaItem", "MPNowPlayingInfoLanguageOption"] }
objc2-core-audio = "0.3.2"
objc2-event-kit = { version = "0.3.2", features = ["EKEventStore", "EKEvent", "EKReminder", "EKCalendar"] }
block2 = "0.6"
tokio = { version = "1.49.0", features = ["full"] }
tauri-plugin-fs = "2.4.4"
tauri-plugin-drag = "2.1.0"


# macOS-specific dependencies for notch detection
[target.'cfg(target_os = "macos")'.dependencies]
objc = "0.2"
cocoa = "0.26"
raw-window-handle = "0.6"
coreaudio-sys = "0.2"    # Raw CoreAudio bindings for HAL Tap
core-foundation = "0.10"  # CFDictionary, CFArray, CFString for aggregate device
libc = "0.2"               # C types for raw bindings
spectrum-analyzer = "1.5"  # FFT frequency analysis
sysinfo = "0.37.2"           # Get process PIDs by name
dirs = "6.0.0"                   # Home directory lookup
